[gd_scene load_steps=11 format=2]

[ext_resource path="res://MetaBoy/Projectiles/GravityGun/Gravity-Gun_Projectile.png" type="Texture" id=1]
[ext_resource path="res://MetaBoy/Projectiles/GravityGun/GravityGunProjectile.gd" type="Script" id=2]
[ext_resource path="res://MetaBoy/Projectiles/Bomb/bomb_explode.wav" type="AudioStream" id=3]
[ext_resource path="res://MetaBoy/Projectiles/GravityGun/GravityLightning.tscn" type="PackedScene" id=4]
[ext_resource path="res://MetaBoy/Projectiles/ExplosionParticles.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 36.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightningEffects/GravityLightning:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightningEffects/GravityLightning2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "moving"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightningEffects/GravityLightning:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -2 ), Vector2( 2, -2 ), Vector2( 2, 2 ), Vector2( -2, 2 ), Vector2( -2, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightningEffects/GravityLightning2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( -2, 2 ), Vector2( -2, -2 ), Vector2( 2, -2 ), Vector2( 2, 2 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 3 )
random_pitch = 1.25

[node name="GravityGunProjectile" type="Area2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/moving = SubResource( 2 )

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 3 )
volume_db = -5.0

[node name="LightningEffects" type="Node2D" parent="."]

[node name="GravityLightning" parent="LightningEffects" instance=ExtResource( 4 )]
position = Vector2( -2, -2 )
z_index = 1
amplitude = 4.0
line_color = Color( 0.984314, 0.858824, 0.521569, 1 )
line_width = 2.0

[node name="GravityLightning2" parent="LightningEffects" instance=ExtResource( 4 )]
position = Vector2( 2, 2 )
z_index = 1
amplitude = 4.0
line_color = Color( 0.968627, 0.737255, 0.113725, 1 )
line_width = 2.0

[node name="ExplosionParticles" parent="." instance=ExtResource( 5 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="finished" from="ExplodeSound" to="." method="_on_ExplodeSound_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
